fix context issue

--- a/overview/5743204.md
+++ b/overview/5743204.md
@@ -23,43 +23,43 @@
     "datePublished": "2021-11-30",
     "variableMeasured": [
 		{
-			"@type": "schema:PropertyValue",
+			"@type": "PropertyValue",
 			"name": "cell type"
 		},
 		{
-			"@type": "schema:PropertyValue",
+			"@type": "PropertyValue",
 			"name": "dose"
 		},
 		{
-			"@type": "schema:PropertyValue",
+			"@type": "PropertyValue",
 			"name": "expose time"
 		},
 		{
-			"@type": "schema:PropertyValue",
+			"@type": "PropertyValue",
 			"name": "toxicological endpoint"
 		},
 		{
-			"@type": "schema:PropertyValue",
+			"@type": "PropertyValue",
 			"name": "physicochemical characterization"
 		},
 		{
-			"@type": "schema:PropertyValue",
+			"@type": "PropertyValue",
 			"name": "composition"
 		},
 		{
-			"@type": "schema:PropertyValue",
+			"@type": "PropertyValue",
 			"name": "size"
 		},
 		{
-			"@type": "schema:PropertyValue",
+			"@type": "PropertyValue",
 			"name": "size distribution"
 		},
 		{
-			"@type": "schema:PropertyValue",
+			"@type": "PropertyValue",
 			"name": "surface area"
 		},
 		{
-			"@type": "schema:PropertyValue",
+			"@type": "PropertyValue",
 			"name": "surface charge"
 		}
 	]
