--- a/overview/5743204.md
+++ b/overview/5743204.md
@@ -5,65 +5,73 @@
 
 ## RDF version of the data from Choi, JS. et al. Towards a generalized toxicity prediction model for oxide nanomaterials using integrated data from different sources (2018)
 <script type="application/ld+json">
-  {
-    "@context": "https://schema.org/",
-    "@type": "Dataset",
-    "http://purl.org/dc/terms/conformsTo": { "@type": "CreativeWork", "@id": "https://bioschemas.org/profiles/Dataset/0.4-DRAFT" },
-    "identifier": "10.5281/zenodo.5743204",
-    "name": "RDF version of the data from Choi, JS. et al. Towards a generalized toxicity prediction model for oxide nanomaterials using integrated data from different sources (2018)",
-    "description": "This is an RDFied version of the dataset published in Choi, JS., Ha, M.K., Trinh, T.X. et al. Towards a generalized toxicity prediction model for oxide nanomaterials using integrated data from different sources. Sci Rep 8, 6110 (2018). The original dataset publication DOI: https://doi.org/10.1038/s41598-018-24483-z. The Original publication authors: Jang-Sik Choi, My Kieu Ha, Tung Xuan Trinh, Tae Hyun Yoon & Hyung-Gi Byun",
-    "license": "https://creativecommons.org/licenses/by/4.0/legalcode",
-    "url": "https://zenodo.org/record/5743204",
-    "creator": [
-      {
-        "@type": "Organization",
-        "name": "NanoSolveIT"
-      }
-    ],
-    "datePublished": "2021-11-30",
-    "variableMeasured": [
-		{
-			"@type": "PropertyValue",
-			"name": "cell type"
+	{
+		"@context": {
+			"bs": "https://bioschemas.org/",
+			"schema": "https://schema.org/",
+			"citation": "schema:citation",
+			"name": "schema:name",
+			"url": "schema:url",
+			"variableMeasured": "schema:variableMeasured"
 		},
-		{
-			"@type": "PropertyValue",
-			"name": "dose"
-		},
-		{
-			"@type": "PropertyValue",
-			"name": "expose time"
-		},
-		{
-			"@type": "PropertyValue",
-			"name": "toxicological endpoint"
-		},
-		{
-			"@type": "PropertyValue",
-			"name": "physicochemical characterization"
-		},
-		{
-			"@type": "PropertyValue",
-			"name": "composition"
-		},
-		{
-			"@type": "PropertyValue",
-			"name": "size"
-		},
-		{
-			"@type": "PropertyValue",
-			"name": "size distribution"
-		},
-		{
-			"@type": "PropertyValue",
-			"name": "surface area"
-		},
-		{
-			"@type": "PropertyValue",
-			"name": "surface charge"
-		}
-	]
-  }
+		"@type": "schema:Dataset",
+		"variableMeasured": [
+			{
+				"@type": "schema:PropertyValue",
+				"name": "cell type"
+			},
+			{
+				"@type": "schema:PropertyValue",
+				"name": "dose"
+			},
+			{
+				"@type": "schema:PropertyValue",
+				"name": "expose time"
+			},
+			{
+				"@type": "schema:PropertyValue",
+				"name": "toxicological endpoint"
+			},
+			{
+				"@type": "schema:PropertyValue",
+				"name": "physicochemical characterization"
+			},
+			{
+				"@type": "schema:PropertyValue",
+				"name": "composition"
+			},
+			{
+				"@type": "schema:PropertyValue",
+				"name": "size"
+			},
+			{
+				"@type": "schema:PropertyValue",
+				"name": "size distribution"
+			},
+			{
+				"@type": "schema:PropertyValue",
+				"name": "surface area"
+			},
+			{
+				"@type": "schema:PropertyValue",
+				"name": "surface charge"
+			}
+		],
+		"name": "RDF version of the data from Choi, JS. et al. Towards a generalized toxicity prediction model for oxide nanomaterials using integrated data from different sources (2018)",
+		"@id": "https://zenodo.org/record/5743204",
+		"url": "https://zenodo.org/record/5743204",
+		"citation": "https://zenodo.org/record/5743204",
+		"http://purl.org/dc/terms/conformsTo": { "@type": "schema:CreativeWork", "@id": "https://bioschemas.org/profiles/Dataset/0.4-DRAFT" },
+		"schema:identifier": "10.5281/zenodo.5743204",
+		"schema:license": "https://creativecommons.org/licenses/by/4.0/legalcode",
+		"schema:creator": [
+		  {
+			"@type": "schema:Organization",
+			"name": "NanoSolveIT"
+		  }
+		],
+		"schema:datePublished": "2021-11-30",
+	}
 </script>
 
 * Date: 2021-11-30
@@ -76,7 +84,7 @@
 
 ## Study Abstract
 
-A generalized toxicity classification model for 7 different oxide nanomaterials is presented in this study. A data set extracted from multiple literature sources and screened by physicochemical property based quality scores were used for model development. Moreover, a few more preprocessing techniques, such as synthetic minority over-sampling technique, were applied to address the imbalanced class problem in the data set. Then, classification models using four different algorithms, such as generalized linear model, support vector machine, random forest, and neural network, were developed and their performances were compared to find the best performing preprocessing methods as well as algorithms. The neural network model built using the balanced data set was identified as the model with best predictive performance, while applicability domain was defined using k-nearest neighbours algorithm. The analysis of relative attribute importance for the built neural network model identified dose, formation enthalpy, exposure time, and hydrodynamic size as the four most important attributes. As the presented model can predict the toxicity of the nanomaterials in consideration of various experimental conditions, it has the advantage of having a broader and more general applicability domain than the existing quantitative structure-activity relationship model.
+A generalized toxicity classification model for 7 different oxide nanomaterials is presented in this study. A data set extracted from multiple literature sources and screened by physicochemical property based quality scores were used for model development. Moreover, a few more preprocessing techniques, such as synthetic minority over-sampling technique, were applied to address the imbalanced class problem in the data set. Then, classification models using four different algorithms, such as generalized linear model, support vector machine, random forest, and neural network, were developed and their performances were compared to find the best performing preprocessing methods as well as algorithms. The neural network model built using the balanced data set was identified as the model with best predictive performance, while applicability domain was defined using k-nearest neighbours algorithm. The analysis of relative attribute importance for the built neural network model identified dose, formation enthalpy, exposure time, and hydrodynamic size as the four most important attributes. As the presented model can predict the toxicity of the nanomaterials in consideration of various experimental conditions, it has the advantage of having a broader and more general applicability domain than the existing quantitative structure-activity relationship model.  [Source: https://doi.org/10.1038/s41598-018-24483-z]
 
 
 
