--- a/overview/5743204.md
+++ b/overview/5743204.md
@@ -70,7 +70,7 @@
 			"name": "NanoSolveIT"
 		  }
 		],
-		"schema:datePublished": "2021-11-30",
+		"schema:datePublished": "2021-11-30"
 	}
 </script>
 
