--- a/overview/13955018.md
+++ b/overview/13955018.md
@@ -1,7 +1,7 @@
 <img style="float: right; width: 200px" src="https://upload.wikimedia.org/wikipedia/commons/e/e1/NanoCommons-Logo-Large_-_White_Circle_01.png" />
 
 
-<div style="float: right; width: 200px" class='altmetric-embed' data-badge-type='donut' data-condensed='true' data-badge-details='right' data-doi="10.5281/zenodo.5743788"></div>
+<div style="float: right; width: 200px" class='altmetric-embed' data-badge-type='donut' data-condensed='true' data-badge-details='right' data-doi="10.5281/zenodo.13955018"></div>
 
 ## RDF version of the data from Anastasios G. Papadiamantis et al. Predicting Cytotoxicity of Metal Oxide Nanoparticles Using Isalos Analytics Platform (2020)
 <script type="application/ld+json">
@@ -59,11 +59,11 @@
 		],
 		"name": "RDF version of the data from Anastasios G. Papadiamantis et al. Predicting Cytotoxicity of Metal Oxide Nanoparticles Using Isalos Analytics Platform (2020)",
 		"schema:description": "This is an RDFied version of the dataset published in Papadiamantis, A.G. et al. Predicting Cytotoxicity of Metal Oxide Nanoparticles Using Isalos Analytics Platform. Nanomaterials 2020, 10, 2017. The original dataset publication DOI: https://doi.org/10.3390/nano10102017. The Original publication authors: Papadiamantis, A.G.; Jänes, J.; Voyiatzis, E.; Sikk, L.; Burk, J.; Burk, P.; Tsoumanis, A.; Ha, M.K.; Yoon, T.H.; Valsami-Jones, E.; Lynch, I.; Melagraki, G.; Tämm, K.; Afantitis, A.",		
-		"@id": "https://zenodo.org/record/5743788",
-		"url": "https://zenodo.org/record/5743788",
-		"citation": "https://zenodo.org/record/5743788",
+		"@id": "https://zenodo.org/record/13955018",
+		"url": "https://zenodo.org/record/13955018",
+		"citation": "https://zenodo.org/record/13955018",
 		"http://purl.org/dc/terms/conformsTo": { "@type": "schema:CreativeWork", "@id": "https://bioschemas.org/profiles/Dataset/0.4-DRAFT" },
-		"schema:identifier": "10.5281/zenodo.5743788",
+		"schema:identifier": "10.5281/zenodo.13955018",
 		"schema:license": "https://creativecommons.org/licenses/by/4.0/legalcode",
 		"schema:creator": [
 		  {
@@ -78,8 +78,8 @@
 * Date: 2021-11-30
 * License: [CC-BY 4.0](https://creativecommons.org/licenses/by/4.0/legalcode)
 * Project: [NanoSolveIT](https://www.nanosolveit.eu/)
-* URL: [https://zenodo.org/record/5743788](https://zenodo.org/record/5743788)
-* DOI: 10.5281/zenodo.5743788
+* URL: [https://zenodo.org/record/13955018](https://zenodo.org/record/13955018)
+* DOI: 10.5281/zenodo.13955018
 
 
 
@@ -105,11 +105,8 @@ A literature curated dataset containing 24 distinct metal oxide (MexOy) nanopart
 | **Group**                    | **Count** |
 | ---------------------------- | --------- |
 | **\# of Materials**          | 28        |
-| **\# of Assays**             | 23        |
-| **\# of Measurement groups** | 140       |
-| **\# of Endpoints**          | 1401      |
+| **\# of Endpoints**          | 494       |
 | **\# of Nanomaterial types** | 14        |
-| **\# of Assay types**        | 5         |
-| **\# of Endpoint types**     | 74        |
-| **\# of Units**              | 7         |
+| **\# of Assay types**        | 3         |
+| **\# of NM quality types**   | 9         |
 | **\# of Species**            | 2         |
