--- a/overview/13955028.md
+++ b/overview/13955028.md
@@ -1,7 +1,7 @@
 <img style="float: right; width: 200px" src="https://upload.wikimedia.org/wikipedia/commons/e/e1/NanoCommons-Logo-Large_-_White_Circle_01.png" />
 
 
-<div style="float: right; width: 200px" class='altmetric-embed' data-badge-type='donut' data-condensed='true' data-badge-details='right' data-doi="10.5281/zenodo.5744003"></div>
+<div style="float: right; width: 200px" class='altmetric-embed' data-badge-type='donut' data-condensed='true' data-badge-details='right' data-doi="10.5281/zenodo.13955028"></div>
 
 ## RDF version of the data from Saarimaki et al. Manually curated transcriptomics data collection for toxicogenomic assessment of engineered nanomaterials (Version 1.0.0) [Zebodo Dataset] (2020)
 <script type="application/ld+json">
@@ -47,11 +47,11 @@
 		],
 		"name": "RDF version of the data from Saarimaki et al. Manually curated transcriptomics data collection for toxicogenomic assessment of engineered nanomaterials (Version 1.0.0) [Zebodo Dataset] (2020)",
 		"schema:description": "This is an RDFied version of the dataset published by Saarimaki et al. Manually curated transcriptomics data collection for toxicogenomic assessment of engineered nanomaterials (Version 1.0.0) [Zenodo Dataset] (2020). The original dataset publication DOI: http://doi.org/10.5281/zenodo.4146981. The Original publication authors: Saarimaki, Laura Aliisa, Federico, Antonio, Lynch, Iseult, Papadiamantis, Anastasios G., Tsoumanis, Andreas, Melagraki, Georgia, Afantitis, Antreas, Serra, Angela, & Greco, Dario",
-		"@id": "https://zenodo.org/record/5744003",
-		"url": "https://zenodo.org/record/5744003",
-		"citation": "https://zenodo.org/record/5744003",
+		"@id": "https://zenodo.org/record/13955028",
+		"url": "https://zenodo.org/record/13955028",
+		"citation": "https://zenodo.org/record/13955028",
 		"http://purl.org/dc/terms/conformsTo": { "@type": "schema:CreativeWork", "@id": "https://bioschemas.org/profiles/Dataset/0.4-DRAFT" },
-		"schema:identifier": "10.5281/zenodo.5744003",
+		"schema:identifier": "10.5281/zenodo.13955028",
 		"schema:license": "https://creativecommons.org/licenses/by/4.0/legalcode",
 		"schema:creator": [
 		  {
@@ -66,8 +66,8 @@
 * Date: 2021-11-30
 * License: [CC-BY 4.0](https://creativecommons.org/licenses/by/4.0/legalcode)
 * Project: [NanoSolveIT](https://www.nanosolveit.eu/)
-* URL: [https://zenodo.org/record/5744003](https://zenodo.org/record/5744003)
-* DOI: 10.5281/zenodo.5744003
+* URL: [https://zenodo.org/record/13955028](https://zenodo.org/record/13955028)
+* DOI: 10.5281/zenodo.13955028
 
 
 
@@ -103,14 +103,11 @@ Toxicogenomics (TGx) approaches are increasingly applied to gain insight into th
 
 | **Group**                              | **Count** |
 | -------------------------------------- | --------- |
-| **\# of Materials**                    | 153       |
-| **\# of Assays**                       | 35        |
-| **\# of Measurement groups**           | 440       |
-| **\# of Endpoints**                    | 249350    |
-| **\# of Nanomaterial types**           | 22        |
-| **\# of Assay types**                  | 35        |
-| **\# of Endpoint types**               | 3         |
-| **\# of Units**                        | 21        |
+| **\# of Materials**                    | 170       |
+| **\# of Endpoints**                    | 249221    |
+| **\# of Nanomaterial types**           | 31        |
+| **\# of Assay types**                  | 1         |
+| **\# of NM quality types**             | 1         |
 | **\# of Species**                      | 3         |
 | **\# of Unique genes**                 | 39947     |
 | **\# of Unique human genes (ENSG)**    | 22841     |
