--- a/overview/13955050.md
+++ b/overview/13955050.md
@@ -1,7 +1,7 @@
 <img style="float: right; width: 200px" src="https://upload.wikimedia.org/wikipedia/commons/e/e1/NanoCommons-Logo-Large_-_White_Circle_01.png" />
 
 
-<div style="float: right; width: 200px" class='altmetric-embed' data-badge-type='donut' data-condensed='true' data-badge-details='right' data-doi="10.5281/zenodo.5744302"></div>
+<div style="float: right; width: 200px" class='altmetric-embed' data-badge-type='donut' data-condensed='true' data-badge-details='right' data-doi="10.5281/zenodo.13955050"></div>
 
 ## RDF version of the data from Hagar I. Labouta et al. Meta-Analysis of Nanoparticle Cytotoxicity via Data-Mining the Literature. NanoImpact (2019)
 <script type="application/ld+json">
@@ -79,11 +79,11 @@
 		],
 		"name": "RDF version of the data from Hagar I. Labouta et al. Meta-Analysis of Nanoparticle Cytotoxicity via Data-Mining the Literature. NanoImpact (2019)",
 		"schema:description": "This is an RDFied version of the dataset published by Hagar I. Labouta et al. Meta-Analysis of Nanoparticle Cytotoxicity via Data-Mining the Literature. NanoImpact (2019). The original dataset publication DOI: https://doi.org/10.1021/acsnano.8b07562 The Original publication authors: Hagar I. Labouta, Nasimeh Asgarian, Kristina Rinker, and David T. Cramb",
-		"@id": "https://zenodo.org/record/5744302",
-		"url": "https://zenodo.org/record/5744302",
-		"citation": "https://zenodo.org/record/5744302",
+		"@id": "https://zenodo.org/record/13955050",
+		"url": "https://zenodo.org/record/13955050",
+		"citation": "https://zenodo.org/record/13955050",
 		"http://purl.org/dc/terms/conformsTo": { "@type": "schema:CreativeWork", "@id": "https://bioschemas.org/profiles/Dataset/0.4-DRAFT" },
-		"schema:identifier": "10.5281/zenodo.5744302",
+		"schema:identifier": "10.5281/zenodo.13955050",
 		"schema:license": "https://creativecommons.org/licenses/by/4.0/legalcode",
 		"schema:creator": [
 		  {
@@ -98,8 +98,8 @@
 * Date: 2021-11-30
 * License: [CC-BY 4.0](https://creativecommons.org/licenses/by/4.0/legalcode)
 * Project: [NanoSolveIT](https://www.nanosolveit.eu/)
-* URL: [https://zenodo.org/record/5744302](https://zenodo.org/record/5744302)
-* DOI: 10.5281/zenodo.5744302
+* URL: [https://zenodo.org/record/13955050](https://zenodo.org/record/13955050)
+* DOI: 10.5281/zenodo.13955050
 
 
 
@@ -131,12 +131,9 @@ Developing predictive modeling frameworks of potential cytotoxicity of engineere
 
 | **Group**                    | **Count** |
 | ---------------------------- | --------- |
-| **\# of Materials**          | 118       |
-| **\# of Assays**             | 267       |
-| **\# of Measurement groups** | 354       |
-| **\# of Endpoints**          | 6061      |
+| **\# of Materials**          | 238       |
+| **\# of Endpoints**          | 2896      |
 | **\# of Nanomaterial types** | 33        |
-| **\# of Assay types**        | 3         |
-| **\# of Endpoint types**     | 3         |
-| **\# of Units**              | 5         |
+| **\# of Assay types**        | 18        |
+| **\# of NM quality types**   | 3         |
 | **\# of Species**            | 8         |
