--- a/overview/13955059.md
+++ b/overview/13955059.md
@@ -1,7 +1,7 @@
 <img style="float: right; width: 200px" src="https://upload.wikimedia.org/wikipedia/commons/e/e1/NanoCommons-Logo-Large_-_White_Circle_01.png" />
 
 
-<div style="float: right; width: 200px" class='altmetric-embed' data-badge-type='donut' data-condensed='true' data-badge-details='right' data-doi="10.5281/zenodo.5744082"></div>
+<div style="float: right; width: 200px" class='altmetric-embed' data-badge-type='donut' data-condensed='true' data-badge-details='right' data-doi="10.5281/zenodo.13955059"></div>
 
 ## RDF version of the data from Anastasios G. et al. Computational enrichment of physicochemical data for the development of a zeta-potential read-across predictive model with Isalos Analytics Platform. NanoImpact (2021)
 <script type="application/ld+json">
@@ -47,11 +47,11 @@
 		],
 		"name": "RDF version of the data from Anastasios G. et al. Computational enrichment of physicochemical data for the development of a zeta-potential read-across predictive model with Isalos Analytics Platform. NanoImpact (2021)",
 		"schema:description": "This is an RDFied version of the dataset published by Anastasios G. et al. Computational enrichment of physicochemical data for the development of a zeta-potential read-across predictive model with Isalos Analytics Platform. NanoImpact (2021). The original dataset publication DOI: https://doi.org/10.1016/j.impact.2021.100308 The Original publication authors: Anastasios G. Papadiamantis, Antreas Afantitis, Andreas Tsoumanis, Eugenia Valsami-Jones, Iseult Lynch, Georgia Melagraki",
-		"@id": "https://zenodo.org/record/5744082",
-		"url": "https://zenodo.org/record/5744082",
-		"citation": "https://zenodo.org/record/5744082",
+		"@id": "https://zenodo.org/record/13955059",
+		"url": "https://zenodo.org/record/13955059",
+		"citation": "https://zenodo.org/record/13955059",
 		"http://purl.org/dc/terms/conformsTo": { "@type": "schema:CreativeWork", "@id": "https://bioschemas.org/profiles/Dataset/0.4-DRAFT" },
-		"schema:identifier": "10.5281/zenodo.5744082",
+		"schema:identifier": "10.5281/zenodo.13955059",
 		"schema:license": "https://creativecommons.org/licenses/by/4.0/legalcode",
 		"schema:creator": [
 		  {
@@ -66,8 +66,8 @@
 * Date: 2021-11-30
 * License: [CC-BY 4.0](https://creativecommons.org/licenses/by/4.0/legalcode)
 * Project: [NanoSolveIT](https://www.nanosolveit.eu/)
-* URL: [https://zenodo.org/record/5744082](https://zenodo.org/record/5744082)
-* DOI: 10.5281/zenodo.5744082
+* URL: [https://zenodo.org/record/13955059](https://zenodo.org/record/13955059)
+* DOI: 10.5281/zenodo.13955059
 
 
 
@@ -96,11 +96,7 @@ The physicochemical characterisation data from a library of 69 engineered nanoma
 | **Group**                    | **Count** |
 | ---------------------------- | --------- |
 | **\# of Materials**          | 69        |
-| **\# of Assays**             | 3         |
-| **\# of Measurement groups** | 207       |
-| **\# of Endpoints**          | 1518      |
+| **\# of Endpoints**          | 69        |
 | **\# of Nanomaterial types** | 14        |
-| **\# of Assay types**        | 3         |
-| **\# of Endpoint types**     | 23        |
-| **\# of Units**              | 1         |
-| **\# of Species**            | \-        |
+| **\# of Assay types**        | 1         |
+| **\# of NM quality types**   | 11        |
